--- a/components/app/app.less
+++ b/components/app/app.less
@@ -1,3 +1,27 @@
 .app-component {
-  font-weight: bold;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+
+  > .header-component {
+    flex: 0 0 auto;
+    height: 30px;
+    background-color: gray;
+  }
+
+  > .container {
+    flex: 1 1 0;
+    display: flex;
+
+    > .sidebar-component {
+      flex: 0 0 auto;
+      width: 20%;
+      background-color: lightgray;
+    }
+
+    > .content-component {
+      flex: 1 1 0;
+      background-color: #333;
+    }
+  }
 }
