--- a/components/sidebar/sidebar.less
+++ b/components/sidebar/sidebar.less
@@ -1,7 +1,16 @@
+@import (reference) "../../style/config";
+
 .sidebar-component {
   button {
     display: block;
-    margin-top: 10px;
+    margin-top: @spacing;
+    border: 0;
+    outline: 0;
     background-color: transparent;
+
+    &.selected {
+      color: white;
+      background-color: orange;
+    }
   }
 }
