--- a/src/style/style.less
+++ b/src/style/style.less
@@ -1,5 +1,5 @@
-@import "./config";
-@import "./elements/elements";
+@import "config";
+@import "elements/elements";
 @import "../components/components";
 
 .root {
