--- a/src/components/task/task.less
+++ b/src/components/task/task.less
@@ -4,5 +4,24 @@
     border-radius: 0.5rem;
     width:50%;
     color:@color;
-    padding: 0 0 0 1rem;
+    padding: 0 1rem 0 1rem;
+
+> .toDoItems{
+    padding:0;
+    display: flex;
+    flex-direction: column;
+
+    > li{
+        margin: 0 0 0 0;
+        border: thin solid rgb(83, 83, 83);
+        border-bottom:none;
+        list-style-type:none;
+    }
+    > li:last-child{
+        border-bottom:thin solid rgb(83, 83, 83);
+
+    }
+}
+
+
 }
