--- a/src/components/message/message.less
+++ b/src/components/message/message.less
@@ -1,3 +1,15 @@
 .message-component {
-
+  &.info {
+    background-color: greenyellow;
+  }
+  &.warning {
+    background-color: yellow;
+  }
+  &.error {
+    background-color: red;
+  }
+  &.fatal {
+    background-color: darkred;
+  }
 }
+
